--- a/src/App.css
+++ b/src/App.css
@@ -374,37 +374,98 @@ width:100%;
   width:32%;
   margin-bottom:40px;
   border-radius:10px;
-  position: relative;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-}
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 6px 4px 0px, rgba(14, 30, 37, 0.32) 0px 6px 16px 0px;
+  cursor:pointer;
 
-.project:hover .project_name {
-  opacity: 1;
 }
-.project img{
-  height:320px;
-  width:100%;
- border-radius:10px;
- display:block;
-}
-.project_name{
+.imagebox{
+  position: relative;
   
-  font-size:20px;
-  text-transform:uppercase;
-  text-align:center;
+}
+.overlay {
   position: absolute; 
   bottom: 0; 
   background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  background: rgba(0, 0, 0, 0.644); /* Black see-through */
   color: #f1f1f1; 
-  width: 88%;
+  width: 100%;
   transition: .5s ease;
   opacity:0;
   color: white;
-  font-weight:600;
-  padding: 20px;
+  font-size: 45px;
+  text-align: center;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+.imagebox:hover .overlay {
+  opacity: 1;
+}
+
+.project img{
+  height:320px;
+  width:100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+ 
+}
+.project_name{
+ 
+  width: 90%;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin:0px auto;
+  padding:10px 0px;
+  
+}
+.project_name p{
+  font-weight:600;
+  font-size:20px;
+  text-transform:uppercase;
+  text-align:center;
+}
+.project_links{
+
+  display:flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content:space-between;
+ 
+}
+.project_links a{
+  text-decoration: none;
+}
+.project_links p{
+  padding:5px;
+  font-family:"Open Sans",sans-serif;
+  font-size:16px;
+  border:none;
+  border-radius:5px;
+  cursor:pointer;
+  font-weight:400;
+  
+}
+.frontend{
+  color:red; 
+}
+.frontend:hover{
+  background-color:red;
+  color:white;
+}
+.backend{
+  color:seagreen;
+}
+.backend:hover{
+  background-color:seagreen;
+  color:white;
+}
+.live{
+  color:rgb(48, 48, 195);
+}
+.live:hover{ 
+  background-color:rgb(48, 48, 195);
+  color:white;
 }
 .contact_section{
   
